<resources>
  <string name="app_name" translatable="false">节拍器</string>
  <string name="app_developer" translatable="false">S.Jason</string>
  <string name="app_mail" translatable="false">bilter1001@163.com</string>
  <string name="app_website" translatable="false">bilter1001@163.com</string>
  <string name="app_vending_dev" translatable="false">bilter1001@163.com</string>
  <string name="app_vending_app" translatable="false">bilter1001@163.com</string>
  <string name="app_vending_key" translatable="false">bilter1001@163.com</string>
  <string name="app_github" translatable="false">bilter1001@163.com</string>
  <string name="app_translate" translatable="false">https://app.transifex.com/patzly/tack-android/</string>
  <string name="app_privacy" translatable="false">bilter1001@163.com/</string>
  <string name="activation_title" translatable="false">激活应用</string>
  <string name="activation_hint" translatable="false">请输入激活码</string>
  <string name="activation_button" translatable="false">激活</string>
  <string name="activation_success" translatable="false">激活成功</string>
  <string name="activation_failed" translatable="false">激活码无效或已被使用</string>
  <string name="activation_format_hint" translatable="false">格式：TACK-XXXX-XXXX-XXXX</string>
  <string name="generator_title" translatable="false">批量生成激活码</string>
  <string name="generator_count_hint" translatable="false">生成数量</string>
  <string name="generator_button" translatable="false">生成</string>
  <string name="generator_copied" translatable="false">已复制到剪贴板</string>
  <string name="generator_password_title" translatable="false">输入管理密码</string>
  <string name="generator_password_hint" translatable="false">密码</string>
  <string name="generator_password_wrong" translatable="false">密码错误</string>
  <string name="title_feedback">Feedback</string>
  <string name="title_about">About</string>
  <string name="title_help">Help</string>
  <string name="title_licenses">Open source licenses</string>
  <string name="title_settings">Settings</string>
  <string name="title_notification_channel">Metronome service</string>
  <string name="title_options">Options</string>
  <string name="title_general">General</string>
  <string name="title_metronome">Metronome</string>
  <string name="title_controls">Controls</string>
  <string name="title_logcat">Logcat</string>
  <string name="title_songs">Song library</string>
  <string name="title_songs_short">Songs</string>
  <string name="title_song_details">Song details</string>
  <string name="label_bpm_value">%1$d bpm</string>
  <string name="label_bpm">bpm</string>
  <string name="label_ms">%1$s ms</string>
  <string name="label_db_signed">%1$s dB</string>
  <string name="label_tempo">Tempo</string>
  <string name="label_tempo_keyboard">Keyboard</string>
  <string name="label_tempo_tap">Tap</string>
  <string name="label_tempo_instant">Apply instantly</string>
  <string name="label_tempo_largo">Largo</string>
  <string name="label_tempo_larghetto">Larghetto</string>
  <string name="label_tempo_adagio">Adagio</string>
  <string name="label_tempo_andante">Andante</string>
  <string name="label_tempo_moderato">Moderato</string>
  <string name="label_tempo_allegro">Allegro</string>
  <string name="label_tempo_presto">Presto</string>
  <string name="label_tempo_prestissimo">Prestissimo</string>
  <string name="label_tempo_input_help">Values from %1$d to %2$d</string>
  <string name="label_beat_mode_all">Sound and vibration</string>
  <string name="label_beat_mode_sound">Sound only</string>
  <string name="label_beat_mode_vibration">Vibration only</string>
  <string name="label_part_name">Part name</string>
  <string name="label_part_unnamed">Part %1$d</string>
  <string name="label_part_current">Part %1$d: %2$s</string>
  <string name="label_part_edit">Edit part %1$d</string>
  <string name="label_part_no_duration">No duration</string>
  <string name="label_part_duration_notification">%1$s / %2$s</string>
  <plurals name="label_parts_count">
    <item quantity="one">%1$d part</item>
    <item quantity="other">%1$d parts</item>
  </plurals>
  <string name="label_song_options">Additional options</string>
  <string name="label_song_options_dialog">Song options</string>
  <string name="label_song_looped">Looped</string>
  <string name="label_song_looped_description">Restart song when at end</string>
  <string name="label_song_not_looped">Not looped</string>
  <string name="label_song_speed">Practice tempo</string>
  <string name="label_song_speed_description">Play parts at %1$d%% of their original tempo</string>
  <string name="label_song_speed_description_original">Play parts at their original tempo</string>
  <string name="label_song_speed_short">%1$d%% practice tempo</string>
  <string name="label_song_speed_original">Original tempo</string>
  <string name="label_sort_name">Name</string>
  <string name="label_sort_last_played">Last played</string>
  <string name="label_sort_last_played_date">Last played %1$s</string>
  <string name="label_sort_never_played">Never played</string>
  <string name="label_sort_most_played">Most played</string>
  <plurals name="label_sort_most_played_times">
    <item quantity="one">Played %1$d time</item>
    <item quantity="other">Played %1$d times</item>
  </plurals>
  <string name="label_song_name">Song name</string>
  <string name="label_song_name_help">Name must be unique</string>
  <string name="label_song_name_used">Name already used</string>
  <string name="widget_songs_preview_title1">Bach Brandenburg Concerto No. 2</string>
  <string name="widget_songs_preview_title2">Debussy Syrinx</string>
  <string name="widget_songs_preview_title3">Mozart Serenade No. 13</string>
  <string name="widget_songs_preview_parts1">3 parts</string>
  <string name="widget_songs_preview_parts2">1 part</string>
  <string name="widget_songs_preview_parts3">4 parts</string>
  <string name="action_back">Back</string>
  <string name="action_close">Close</string>
  <string name="action_apply">Apply</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_increase">Increase</string>
  <string name="action_decrease">Decrease</string>
  <string name="action_play">Play</string>
  <string name="action_play_stop">Play/Stop</string>
  <string name="action_stop">Stop</string>
  <string name="action_add_beat">Add beat</string>
  <string name="action_remove_beat">Remove beat</string>
  <string name="action_add_sub">Add subdivision</string>
  <string name="action_remove_sub">Remove subdivision</string>
  <string name="action_beat_mode">Beat mode</string>
  <string name="action_send_feedback">Send feedback</string>
  <string name="action_reset">Reset</string>
  <string name="action_deactivate">Deactivate</string>
  <string name="action_recommend">Recommend</string>
  <string name="action_recommend_description">Tell your friends about Tack</string>
  <string name="action_email">Send email</string>
  <string name="action_email_description">Contact the developer</string>
  <string name="action_rate">Rate on Google Play</string>
  <string name="action_rate_description">Share your thoughts</string>
  <string name="action_support">Support the development</string>
  <string name="action_support_description">Buy the unlock app</string>
  <string name="action_issue">Open new issue on GitHub</string>
  <string name="action_issue_description">Report bugs or suggest features</string>
  <string name="action_retry">Retry</string>
  <string name="action_logcat">Show logcat</string>
  <string name="action_copy_to_clipboard">Copy to clipboard</string>
  <string name="action_reload">Reload</string>
  <string name="action_change_tempo">Change tempo</string>
  <string name="action_add_song">Add song</string>
  <string name="action_sort_by">Sort by</string>
  <string name="action_add_part">Add part</string>
  <string name="action_add">Add</string>
  <string name="action_save">Save</string>
  <string name="action_discard">Discard</string>
  <string name="action_rename">Rename</string>
  <string name="action_rename_part">Rename part</string>
  <string name="action_rename_part_description">Can also be left empty if numbering alone is enough</string>
  <string name="action_duplicate">Duplicate</string>
  <string name="action_update">Update</string>
  <string name="action_use_current_config">Use current config</string>
  <string name="action_use_current_config_description">From the main page</string>
  <string name="action_delete">Delete</string>
  <string name="action_move_up">Move up</string>
  <string name="action_move_down">Move down</string>
  <string name="action_open_play_store">Open Play Store</string>
  <string name="action_backup_restore">Backup/restore</string>
  <string name="action_backup">Backup</string>
  <string name="action_backup_description">Save a backup file in a directory of your choice</string>
  <string name="action_restore">Restore</string>
  <string name="action_restore_description">Existing songs will never be deleted or overwritten</string>
  <string name="action_view_more_songs">View more songs</string>
  <string name="action_next">Next</string>
  <string name="action_show_parts">Show parts</string>
  <string name="action_next_part">Next part</string>
  <string name="action_prev_part">Previous part</string>
  <string name="action_more">More</string>
  <string name="action_edit">Edit</string>
  <string name="action_expand">Expand</string>
  <string name="action_collapse">Collapse</string>
  <string name="action_show_songs_list">Show songs as list</string>
  <string name="action_learn_more">Learn more</string>
  <string name="action_tempo_tap">Tap tempo</string>
  <string name="msg_feedback">A great app requires a lot of time and lives from the feedback of its users.</string>
  <string name="msg_feedback_contact">Do you have any wishes, comments or questions? Contact me! Otherwise, I would be very happy about a nice review in the Play Store.</string>
  <string name="msg_recommend">Check out this cool metronome app: \n%1$s</string>
  <string name="msg_vibration_unavailable">Vibration not available on this device. Sound will be used.</string>
  <string name="msg_service_running">Metronome service is running</string>
  <string name="msg_service_running_return">Tap to return to Tack</string>
  <string name="msg_service_description">Service for metronome configuration and playback</string>
  <string name="msg_reset">Reset all?</string>
  <string name="msg_reset_description">Do you really want to reset the entire app including song library and settings? Create a backup of your song library first if needed. Reset cannot be undone.</string>
  <string name="msg_reset_timer">Reset timer?</string>
  <string name="msg_reset_timer_description">You can change the default behavior of whether to reset the timer at start in settings.</string>
  <string name="msg_reset_elapsed">Reset elapsed time?</string>
  <string name="msg_reset_elapsed_description">Do you really want to reset elapsed time? This cannot be undone.</string>
  <string name="msg_gain">Play with volume boost?</string>
  <string name="msg_gain_description">Be careful not to play through headphones as loud sounds can cause ear damage!</string>
  <string name="msg_split_screen">Window too small</string>
  <string name="msg_split_screen_description">Tack may have problems to position metronome controls in split-screen mode. Please use a larger window if possible.</string>
  <string name="msg_notification_permission">Notification permission required</string>
  <string name="msg_notification_permission_description">Tack needs permission to show notifications to continue playback in the background by displaying a low-priority notification. If you deny it in the next dialog, Android will stop playback when you leave the app.</string>
  <string name="msg_notification_permission_denied">Notification permission is required for background playback</string>
</resources>